action added to fcm message receiver class

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,8 @@
             android:name=".FcmMessageReceiverDialogActivity"
             android:excludeFromRecents="true"
             android:theme="@style/Theme.AppCompat.Dialog" />
-        <activity android:name=".ChallengeMsgActivity"></activity>
+        <activity android:name=".ChallengeMsgActivity" />
+        <activity android:name=".ChallengeAcceptedActivityWithProgressBar"></activity>
     </application>
 
 </manifest>
